--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@sendgrid/mail": "^8.1.3",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/auth-helpers-react": "^0.5.0",
     "@supabase/realtime-js": "^2.10.6",
     "firebase": "^10.13.2",
     "next": "14.2.13",
+    "nodemailer": "^6.9.15",
     "papaparse": "^5.4.1",
     "react": "^18",
     "react-dom": "^18"
@@ -21,6 +23,7 @@
   "devDependencies": {
     "@supabase/supabase-js": "^2.45.4",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.16",
     "@types/papaparse": "^5.3.14",
     "@types/react": "^18",
     "@types/react-dom": "^18",
